@startuml collaborator_aggregate
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 40
skinparam ranksep 60
hide empty members

package "AirTransportCompany_Aggregate" <<aggregate>> {
  class AirTransportCompany <<entity>> <<root>> {
    name : String
  }
  note right of AirTransportCompany : name is a plain String (non-blank)
  class CompanyIATA <<value object>> {
    code : String
  }
  note right of CompanyIATA : 2-3 uppercase letters.\nIdentity (primary key).\nDistinct class from AirportIATA.
  class CompanyICAO <<value object>> {
    code : String
  }
  note right of CompanyICAO : 3 uppercase letters.\nDistinct class from AirportICAO.
  AirTransportCompany *-- CompanyIATA : identifiedBy
  AirTransportCompany *-- CompanyICAO : identifiedBy
}

package "AirControlArea_Aggregate" <<aggregate>> {
  class AirControlArea <<entity>> <<root>> {
    maxAltitudeMetres : int
  }
  class AreaCode <<value object>> {
    code : String
  }
  note right of AreaCode : unique in system (US050)
  class AreaName <<value object>> {
    name : String
  }
  note right of AreaName : unique (client clarification)
  class BoundingBox <<value object>> {
    minLat : double
    maxLat : double
    minLon : double
    maxLon : double
  }
  note right of BoundingBox : Rectangle boundary.\nInvariant: minLat < maxLat, minLon < maxLon

  AirControlArea *---- AreaCode : identifiedBy
  AirControlArea *---- AreaName : namedAs
  AirControlArea *---- BoundingBox : boundedBy
}

package "Collaborator_Aggregate" <<aggregate>> {
  abstract class Collaborator <<entity>> <<root>> {
    name : String
    position : String
  }

  class ATCCollaborator <<entity>> {
  }
  class FlightControlOperator <<entity>> {
  }
  class WeatherPerson <<entity>> {
  }
  class SecurityClearance <<value object>> {
    expiryDate : LocalDate
  }
  note right of SecurityClearance : auto-expires.\nUpdatable by Admin/Backoffice (sec. 3.1.1)
  class SkillsAssessment <<value object>> {
    assessmentDate : LocalDate
  }
  note right of SkillsAssessment : periodic, every 5 years (sec. 3.1.1)
  class SystemUser <<entity>> {
  }
  note left of SystemUser : EAPLI framework boundary.\nStores: email (unique, sec. 3.1.1), name, phoneNumber.\nInternal details managed by the framework.
  Collaborator <|--- ATCCollaborator
  Collaborator <|--- FlightControlOperator
  Collaborator <|--- WeatherPerson
  Collaborator *--- SecurityClearance : hasActive
  Collaborator *--- SkillsAssessment : assessed
  Collaborator -> SystemUser : linkedTo
}


Collaborator "*" ----> "0..1" AirTransportCompany: employedBy >
note on link : Only ATCCollaborator.\nFCO/WeatherPerson: null.

Collaborator "*" ---> "0..1" AirControlArea : worksFor >
note on link : Only applicable to FCO and WeatherPerson.\nATCCollaborator always null.


@enduml
